# my--father-mother

./: AGENTS.md  CLAUDE.md  DISCOVERY.md  GEMINI.md  INTEGRATIONS.md  README.md  ecosystem.yaml  main.py  patch_watch.py  pyproject.toml  seed.yaml  value-repos.json
.github/workflows/: build-test-lint.yml  ci.yml  test-matrix.yml
docs/: API.md  PRICING.md  index.html
scripts/: mcp_server.py
tests/: conftest.py  test_e2e.py  test_main.py
